// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`offline batch round data entry deletes offline batch 1`] = `
<div>
  <form
    class="sc-bdVaJa hazmWT"
  >
    <div
      style="width: 510px; margin-bottom: 20px;"
    >
      <p>
        When you have examined all the ballots assigned to you, enter the number of votes recorded for each candidate/choice for each batch of audited ballots.
      </p>
      
    </div>
    <fieldset>
      <table
        class="bp3-html-table bp3-html-table-bordered bp3-html-table-striped"
        id="results-table"
      >
        <thead>
          <tr>
            <th />
            <th>
              Batch Name
            </th>
            <th>
              Batch Type
            </th>
            <th>
              Choice One
            </th>
            <th>
              Choice Two
            </th>
            <th
              style="color: rgb(19, 124, 189); font-weight: 600;"
            >
              Total
            </th>
          </tr>
        </thead>
        <tbody>
          <tr>
            <td
              colspan="5"
            >
              No batches added. Add your first batch below.
            </td>
          </tr>
          <tr>
            <td
              style="color: rgb(19, 124, 189); font-weight: 600;"
            />
            <td
              style="color: rgb(19, 124, 189); font-weight: 600;"
            >
              Total
            </td>
            <td
              style="color: rgb(19, 124, 189); font-weight: 600;"
            />
            <td
              style="color: rgb(19, 124, 189); font-weight: 600;"
            >
              0
            </td>
            <td
              style="color: rgb(19, 124, 189); font-weight: 600;"
            >
              0
            </td>
            <td
              style="color: rgb(19, 124, 189); font-weight: 600;"
            >
              0
            </td>
          </tr>
        </tbody>
      </table>
      <div
        style="display: flex; justify-content: space-between; margin-top: 20px;"
      >
        <button
          class="bp3-button bp3-intent-primary"
          type="button"
        >
          <span
            class="bp3-icon bp3-icon-plus"
            icon="plus"
          >
            <svg
              data-icon="plus"
              height="16"
              viewBox="0 0 16 16"
              width="16"
            >
              <desc>
                plus
              </desc>
              <path
                d="M13 7H9V3c0-.55-.45-1-1-1s-1 .45-1 1v4H3c-.55 0-1 .45-1 1s.45 1 1 1h4v4c0 .55.45 1 1 1s1-.45 1-1V9h4c.55 0 1-.45 1-1s-.45-1-1-1z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
          <span
            class="bp3-button-text"
          >
            Add batch
          </span>
        </button>
        <button
          class="bp3-button"
          style="width: 160px;"
          type="button"
        >
          <span
            class="bp3-icon bp3-icon-clipboard"
            icon="clipboard"
          >
            <svg
              data-icon="clipboard"
              height="16"
              viewBox="0 0 16 16"
              width="16"
            >
              <desc>
                clipboard
              </desc>
              <path
                d="M11 2c0-.55-.45-1-1-1h.22C9.88.4 9.24 0 8.5 0S7.12.4 6.78 1H7c-.55 0-1 .45-1 1v1h5V2zm2 0h-1v2H5V2H4c-.55 0-1 .45-1 1v12c0 .55.45 1 1 1h9c.55 0 1-.45 1-1V3c0-.55-.45-1-1-1z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
          <span
            class="bp3-button-text"
          >
            Copy to clipboard
          </span>
        </button>
        <button
          class="bp3-button"
          type="button"
        >
          <span
            class="bp3-button-text"
          >
            Finalize Results
          </span>
        </button>
      </div>
    </fieldset>
  </form>
</div>
`;

exports[`offline batch round data entry edits offline batch 1`] = `
<div>
  <form
    class="sc-bdVaJa hazmWT"
  >
    <div
      style="width: 510px; margin-bottom: 20px;"
    >
      <p>
        When you have examined all the ballots assigned to you, enter the number of votes recorded for each candidate/choice for each batch of audited ballots.
      </p>
      
    </div>
    <fieldset>
      <table
        class="bp3-html-table bp3-html-table-bordered bp3-html-table-striped"
        id="results-table"
      >
        <thead>
          <tr>
            <th />
            <th>
              Batch Name
            </th>
            <th>
              Batch Type
            </th>
            <th>
              Choice One
            </th>
            <th>
              Choice Two
            </th>
            <th
              style="color: rgb(19, 124, 189); font-weight: 600;"
            >
              Total
            </th>
          </tr>
        </thead>
        <tbody>
          <tr>
            <td
              style="text-align: center;"
            >
              <button
                class="bp3-button"
                type="button"
              >
                <span
                  class="bp3-icon bp3-icon-edit"
                  icon="edit"
                >
                  <svg
                    data-icon="edit"
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                  >
                    <desc>
                      edit
                    </desc>
                    <path
                      d="M3.25 10.26l2.47 2.47 6.69-6.69-2.46-2.48-6.7 6.7zM.99 14.99l3.86-1.39-2.46-2.44-1.4 3.83zm12.25-14c-.48 0-.92.2-1.24.51l-1.44 1.44 2.47 2.47 1.44-1.44c.32-.32.51-.75.51-1.24.01-.95-.77-1.74-1.74-1.74z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
                <span
                  class="bp3-button-text"
                >
                  Edit
                </span>
              </button>
            </td>
            <td>
              Batch12
            </td>
            <td>
              Other
            </td>
            <td>
              10
            </td>
            <td>
              20
            </td>
            <td
              style="color: rgb(19, 124, 189); font-weight: 600;"
            >
              30
            </td>
          </tr>
          <tr>
            <td
              style="color: rgb(19, 124, 189); font-weight: 600;"
            />
            <td
              style="color: rgb(19, 124, 189); font-weight: 600;"
            >
              Total
            </td>
            <td
              style="color: rgb(19, 124, 189); font-weight: 600;"
            />
            <td
              style="color: rgb(19, 124, 189); font-weight: 600;"
            >
              10
            </td>
            <td
              style="color: rgb(19, 124, 189); font-weight: 600;"
            >
              20
            </td>
            <td
              style="color: rgb(19, 124, 189); font-weight: 600;"
            >
              30
            </td>
          </tr>
        </tbody>
      </table>
      <div
        style="display: flex; justify-content: space-between; margin-top: 20px;"
      >
        <button
          class="bp3-button bp3-intent-primary"
          type="button"
        >
          <span
            class="bp3-icon bp3-icon-plus"
            icon="plus"
          >
            <svg
              data-icon="plus"
              height="16"
              viewBox="0 0 16 16"
              width="16"
            >
              <desc>
                plus
              </desc>
              <path
                d="M13 7H9V3c0-.55-.45-1-1-1s-1 .45-1 1v4H3c-.55 0-1 .45-1 1s.45 1 1 1h4v4c0 .55.45 1 1 1s1-.45 1-1V9h4c.55 0 1-.45 1-1s-.45-1-1-1z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
          <span
            class="bp3-button-text"
          >
            Add batch
          </span>
        </button>
        <button
          class="bp3-button"
          style="width: 160px;"
          type="button"
        >
          <span
            class="bp3-icon bp3-icon-clipboard"
            icon="clipboard"
          >
            <svg
              data-icon="clipboard"
              height="16"
              viewBox="0 0 16 16"
              width="16"
            >
              <desc>
                clipboard
              </desc>
              <path
                d="M11 2c0-.55-.45-1-1-1h.22C9.88.4 9.24 0 8.5 0S7.12.4 6.78 1H7c-.55 0-1 .45-1 1v1h5V2zm2 0h-1v2H5V2H4c-.55 0-1 .45-1 1v12c0 .55.45 1 1 1h9c.55 0 1-.45 1-1V3c0-.55-.45-1-1-1z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
          <span
            class="bp3-button-text"
          >
            Copy to clipboard
          </span>
        </button>
        <button
          class="bp3-button"
          type="button"
        >
          <span
            class="bp3-button-text"
          >
            Finalize Results
          </span>
        </button>
      </div>
    </fieldset>
  </form>
</div>
`;

exports[`offline batch round data entry finalizes offline batches 1`] = `
<div>
  <form
    class="sc-bdVaJa hazmWT"
  >
    <div
      style="width: 510px; margin-bottom: 20px;"
    >
      <p>
        When you have examined all the ballots assigned to you, enter the number of votes recorded for each candidate/choice for each batch of audited ballots.
      </p>
      <div
        class="bp3-callout bp3-intent-success bp3-callout-icon"
        style="margin: 20px 0px 20px 0px;"
      >
        <span
          class="bp3-icon bp3-icon-tick-circle"
          icon="tick-circle"
        >
          <svg
            data-icon="tick-circle"
            height="20"
            viewBox="0 0 20 20"
            width="20"
          >
            <desc>
              tick-circle
            </desc>
            <path
              d="M10 20C4.48 20 0 15.52 0 10S4.48 0 10 0s10 4.48 10 10-4.48 10-10 10zm5-14c-.28 0-.53.11-.71.29L8 12.59l-2.29-2.3a1.003 1.003 0 00-1.42 1.42l3 3c.18.18.43.29.71.29.28 0 .53-.11.71-.29l7-7A1.003 1.003 0 0015 6z"
              fill-rule="evenodd"
            />
          </svg>
        </span>
        Results finalized at
         
        4/13/2021, 3:01:00 PM
      </div>
    </div>
    <fieldset
      disabled=""
    >
      <table
        class="bp3-html-table bp3-html-table-bordered bp3-html-table-striped"
        id="results-table"
      >
        <thead>
          <tr>
            <th />
            <th>
              Batch Name
            </th>
            <th>
              Batch Type
            </th>
            <th>
              Choice One
            </th>
            <th>
              Choice Two
            </th>
            <th
              style="color: rgb(19, 124, 189); font-weight: 600;"
            >
              Total
            </th>
          </tr>
        </thead>
        <tbody>
          <tr>
            <td
              style="text-align: center;"
            >
              <button
                class="bp3-button"
                type="button"
              >
                <span
                  class="bp3-icon bp3-icon-edit"
                  icon="edit"
                >
                  <svg
                    data-icon="edit"
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                  >
                    <desc>
                      edit
                    </desc>
                    <path
                      d="M3.25 10.26l2.47 2.47 6.69-6.69-2.46-2.48-6.7 6.7zM.99 14.99l3.86-1.39-2.46-2.44-1.4 3.83zm12.25-14c-.48 0-.92.2-1.24.51l-1.44 1.44 2.47 2.47 1.44-1.44c.32-.32.51-.75.51-1.24.01-.95-.77-1.74-1.74-1.74z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
                <span
                  class="bp3-button-text"
                >
                  Edit
                </span>
              </button>
            </td>
            <td>
              Batch12
            </td>
            <td>
              Other
            </td>
            <td>
              10
            </td>
            <td>
              20
            </td>
            <td
              style="color: rgb(19, 124, 189); font-weight: 600;"
            >
              30
            </td>
          </tr>
          <tr>
            <td
              style="color: rgb(19, 124, 189); font-weight: 600;"
            />
            <td
              style="color: rgb(19, 124, 189); font-weight: 600;"
            >
              Total
            </td>
            <td
              style="color: rgb(19, 124, 189); font-weight: 600;"
            />
            <td
              style="color: rgb(19, 124, 189); font-weight: 600;"
            >
              10
            </td>
            <td
              style="color: rgb(19, 124, 189); font-weight: 600;"
            >
              20
            </td>
            <td
              style="color: rgb(19, 124, 189); font-weight: 600;"
            >
              30
            </td>
          </tr>
        </tbody>
      </table>
      <div
        style="display: flex; justify-content: space-between; margin-top: 20px;"
      >
        <button
          class="bp3-button bp3-disabled bp3-intent-primary"
          disabled=""
          tabindex="-1"
          type="button"
        >
          <span
            class="bp3-icon bp3-icon-plus"
            icon="plus"
          >
            <svg
              data-icon="plus"
              height="16"
              viewBox="0 0 16 16"
              width="16"
            >
              <desc>
                plus
              </desc>
              <path
                d="M13 7H9V3c0-.55-.45-1-1-1s-1 .45-1 1v4H3c-.55 0-1 .45-1 1s.45 1 1 1h4v4c0 .55.45 1 1 1s1-.45 1-1V9h4c.55 0 1-.45 1-1s-.45-1-1-1z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
          <span
            class="bp3-button-text"
          >
            Add batch
          </span>
        </button>
        <button
          class="bp3-button"
          style="width: 160px;"
          type="button"
        >
          <span
            class="bp3-icon bp3-icon-clipboard"
            icon="clipboard"
          >
            <svg
              data-icon="clipboard"
              height="16"
              viewBox="0 0 16 16"
              width="16"
            >
              <desc>
                clipboard
              </desc>
              <path
                d="M11 2c0-.55-.45-1-1-1h.22C9.88.4 9.24 0 8.5 0S7.12.4 6.78 1H7c-.55 0-1 .45-1 1v1h5V2zm2 0h-1v2H5V2H4c-.55 0-1 .45-1 1v12c0 .55.45 1 1 1h9c.55 0 1-.45 1-1V3c0-.55-.45-1-1-1z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
          <span
            class="bp3-button-text"
          >
            Copy to clipboard
          </span>
        </button>
        <button
          class="bp3-button bp3-disabled"
          disabled=""
          tabindex="-1"
          type="button"
        >
          <span
            class="bp3-button-text"
          >
            Finalize Results
          </span>
        </button>
      </div>
    </fieldset>
  </form>
</div>
`;

exports[`offline batch round data entry renders 1`] = `
<div>
  <form
    class="sc-bdVaJa hazmWT"
  >
    <div
      style="width: 510px; margin-bottom: 20px;"
    >
      <p>
        When you have examined all the ballots assigned to you, enter the number of votes recorded for each candidate/choice for each batch of audited ballots.
      </p>
      
    </div>
    <fieldset>
      <table
        class="bp3-html-table bp3-html-table-bordered bp3-html-table-striped"
        id="results-table"
      >
        <thead>
          <tr>
            <th />
            <th>
              Batch Name
            </th>
            <th>
              Batch Type
            </th>
            <th>
              Choice One
            </th>
            <th>
              Choice Two
            </th>
            <th
              style="color: rgb(19, 124, 189); font-weight: 600;"
            >
              Total
            </th>
          </tr>
        </thead>
        <tbody>
          <tr>
            <td
              colspan="5"
            >
              No batches added. Add your first batch below.
            </td>
          </tr>
          <tr>
            <td
              style="color: rgb(19, 124, 189); font-weight: 600;"
            />
            <td
              style="color: rgb(19, 124, 189); font-weight: 600;"
            >
              Total
            </td>
            <td
              style="color: rgb(19, 124, 189); font-weight: 600;"
            />
            <td
              style="color: rgb(19, 124, 189); font-weight: 600;"
            >
              0
            </td>
            <td
              style="color: rgb(19, 124, 189); font-weight: 600;"
            >
              0
            </td>
            <td
              style="color: rgb(19, 124, 189); font-weight: 600;"
            >
              0
            </td>
          </tr>
        </tbody>
      </table>
      <div
        style="display: flex; justify-content: space-between; margin-top: 20px;"
      >
        <button
          class="bp3-button bp3-intent-primary"
          type="button"
        >
          <span
            class="bp3-icon bp3-icon-plus"
            icon="plus"
          >
            <svg
              data-icon="plus"
              height="16"
              viewBox="0 0 16 16"
              width="16"
            >
              <desc>
                plus
              </desc>
              <path
                d="M13 7H9V3c0-.55-.45-1-1-1s-1 .45-1 1v4H3c-.55 0-1 .45-1 1s.45 1 1 1h4v4c0 .55.45 1 1 1s1-.45 1-1V9h4c.55 0 1-.45 1-1s-.45-1-1-1z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
          <span
            class="bp3-button-text"
          >
            Add batch
          </span>
        </button>
        <button
          class="bp3-button"
          style="width: 160px;"
          type="button"
        >
          <span
            class="bp3-icon bp3-icon-clipboard"
            icon="clipboard"
          >
            <svg
              data-icon="clipboard"
              height="16"
              viewBox="0 0 16 16"
              width="16"
            >
              <desc>
                clipboard
              </desc>
              <path
                d="M11 2c0-.55-.45-1-1-1h.22C9.88.4 9.24 0 8.5 0S7.12.4 6.78 1H7c-.55 0-1 .45-1 1v1h5V2zm2 0h-1v2H5V2H4c-.55 0-1 .45-1 1v12c0 .55.45 1 1 1h9c.55 0 1-.45 1-1V3c0-.55-.45-1-1-1z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
          <span
            class="bp3-button-text"
          >
            Copy to clipboard
          </span>
        </button>
        <button
          class="bp3-button"
          type="button"
        >
          <span
            class="bp3-button-text"
          >
            Finalize Results
          </span>
        </button>
      </div>
    </fieldset>
  </form>
</div>
`;

exports[`offline batch round data entry renders with offline batches 1`] = `
<div>
  <form
    class="sc-bdVaJa hazmWT"
  >
    <div
      style="width: 510px; margin-bottom: 20px;"
    >
      <p>
        When you have examined all the ballots assigned to you, enter the number of votes recorded for each candidate/choice for each batch of audited ballots.
      </p>
      
    </div>
    <fieldset>
      <table
        class="bp3-html-table bp3-html-table-bordered bp3-html-table-striped"
        id="results-table"
      >
        <thead>
          <tr>
            <th />
            <th>
              Batch Name
            </th>
            <th>
              Batch Type
            </th>
            <th>
              Choice One
            </th>
            <th>
              Choice Two
            </th>
            <th
              style="color: rgb(19, 124, 189); font-weight: 600;"
            >
              Total
            </th>
          </tr>
        </thead>
        <tbody>
          <tr>
            <td
              style="text-align: center;"
            >
              <button
                class="bp3-button"
                type="button"
              >
                <span
                  class="bp3-icon bp3-icon-edit"
                  icon="edit"
                >
                  <svg
                    data-icon="edit"
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                  >
                    <desc>
                      edit
                    </desc>
                    <path
                      d="M3.25 10.26l2.47 2.47 6.69-6.69-2.46-2.48-6.7 6.7zM.99 14.99l3.86-1.39-2.46-2.44-1.4 3.83zm12.25-14c-.48 0-.92.2-1.24.51l-1.44 1.44 2.47 2.47 1.44-1.44c.32-.32.51-.75.51-1.24.01-.95-.77-1.74-1.74-1.74z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
                <span
                  class="bp3-button-text"
                >
                  Edit
                </span>
              </button>
            </td>
            <td>
              Batch1
            </td>
            <td>
              Other
            </td>
            <td>
              10
            </td>
            <td>
              20
            </td>
            <td
              style="color: rgb(19, 124, 189); font-weight: 600;"
            >
              30
            </td>
          </tr>
          <tr>
            <td
              style="color: rgb(19, 124, 189); font-weight: 600;"
            />
            <td
              style="color: rgb(19, 124, 189); font-weight: 600;"
            >
              Total
            </td>
            <td
              style="color: rgb(19, 124, 189); font-weight: 600;"
            />
            <td
              style="color: rgb(19, 124, 189); font-weight: 600;"
            >
              10
            </td>
            <td
              style="color: rgb(19, 124, 189); font-weight: 600;"
            >
              20
            </td>
            <td
              style="color: rgb(19, 124, 189); font-weight: 600;"
            >
              30
            </td>
          </tr>
        </tbody>
      </table>
      <div
        style="display: flex; justify-content: space-between; margin-top: 20px;"
      >
        <button
          class="bp3-button bp3-intent-primary"
          type="button"
        >
          <span
            class="bp3-icon bp3-icon-plus"
            icon="plus"
          >
            <svg
              data-icon="plus"
              height="16"
              viewBox="0 0 16 16"
              width="16"
            >
              <desc>
                plus
              </desc>
              <path
                d="M13 7H9V3c0-.55-.45-1-1-1s-1 .45-1 1v4H3c-.55 0-1 .45-1 1s.45 1 1 1h4v4c0 .55.45 1 1 1s1-.45 1-1V9h4c.55 0 1-.45 1-1s-.45-1-1-1z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
          <span
            class="bp3-button-text"
          >
            Add batch
          </span>
        </button>
        <button
          class="bp3-button"
          style="width: 160px;"
          type="button"
        >
          <span
            class="bp3-icon bp3-icon-clipboard"
            icon="clipboard"
          >
            <svg
              data-icon="clipboard"
              height="16"
              viewBox="0 0 16 16"
              width="16"
            >
              <desc>
                clipboard
              </desc>
              <path
                d="M11 2c0-.55-.45-1-1-1h.22C9.88.4 9.24 0 8.5 0S7.12.4 6.78 1H7c-.55 0-1 .45-1 1v1h5V2zm2 0h-1v2H5V2H4c-.55 0-1 .45-1 1v12c0 .55.45 1 1 1h9c.55 0 1-.45 1-1V3c0-.55-.45-1-1-1z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
          <span
            class="bp3-button-text"
          >
            Copy to clipboard
          </span>
        </button>
        <button
          class="bp3-button"
          type="button"
        >
          <span
            class="bp3-button-text"
          >
            Finalize Results
          </span>
        </button>
      </div>
    </fieldset>
  </form>
</div>
`;

exports[`offline batch round data entry renders with proper totals 1`] = `
<div>
  <form
    class="sc-bdVaJa hazmWT"
  >
    <div
      style="width: 510px; margin-bottom: 20px;"
    >
      <p>
        When you have examined all the ballots assigned to you, enter the number of votes recorded for each candidate/choice for each batch of audited ballots.
      </p>
      
    </div>
    <fieldset>
      <table
        class="bp3-html-table bp3-html-table-bordered bp3-html-table-striped"
        id="results-table"
      >
        <thead>
          <tr>
            <th />
            <th>
              Batch Name
            </th>
            <th>
              Batch Type
            </th>
            <th>
              Choice One
            </th>
            <th>
              Choice Two
            </th>
            <th
              style="color: rgb(19, 124, 189); font-weight: 600;"
            >
              Total
            </th>
          </tr>
        </thead>
        <tbody>
          <tr>
            <td
              style="text-align: center;"
            >
              <button
                class="bp3-button"
                type="button"
              >
                <span
                  class="bp3-icon bp3-icon-edit"
                  icon="edit"
                >
                  <svg
                    data-icon="edit"
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                  >
                    <desc>
                      edit
                    </desc>
                    <path
                      d="M3.25 10.26l2.47 2.47 6.69-6.69-2.46-2.48-6.7 6.7zM.99 14.99l3.86-1.39-2.46-2.44-1.4 3.83zm12.25-14c-.48 0-.92.2-1.24.51l-1.44 1.44 2.47 2.47 1.44-1.44c.32-.32.51-.75.51-1.24.01-.95-.77-1.74-1.74-1.74z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
                <span
                  class="bp3-button-text"
                >
                  Edit
                </span>
              </button>
            </td>
            <td>
              Batch1
            </td>
            <td>
              Other
            </td>
            <td>
              5
            </td>
            <td>
              15
            </td>
            <td
              style="color: rgb(19, 124, 189); font-weight: 600;"
            >
              20
            </td>
          </tr>
          <tr>
            <td
              style="text-align: center;"
            >
              <button
                class="bp3-button"
                type="button"
              >
                <span
                  class="bp3-icon bp3-icon-edit"
                  icon="edit"
                >
                  <svg
                    data-icon="edit"
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                  >
                    <desc>
                      edit
                    </desc>
                    <path
                      d="M3.25 10.26l2.47 2.47 6.69-6.69-2.46-2.48-6.7 6.7zM.99 14.99l3.86-1.39-2.46-2.44-1.4 3.83zm12.25-14c-.48 0-.92.2-1.24.51l-1.44 1.44 2.47 2.47 1.44-1.44c.32-.32.51-.75.51-1.24.01-.95-.77-1.74-1.74-1.74z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
                <span
                  class="bp3-button-text"
                >
                  Edit
                </span>
              </button>
            </td>
            <td>
              Batch2
            </td>
            <td>
              Provisional
            </td>
            <td>
              5
            </td>
            <td>
              5
            </td>
            <td
              style="color: rgb(19, 124, 189); font-weight: 600;"
            >
              10
            </td>
          </tr>
          <tr>
            <td
              style="color: rgb(19, 124, 189); font-weight: 600;"
            />
            <td
              style="color: rgb(19, 124, 189); font-weight: 600;"
            >
              Total
            </td>
            <td
              style="color: rgb(19, 124, 189); font-weight: 600;"
            />
            <td
              style="color: rgb(19, 124, 189); font-weight: 600;"
            >
              10
            </td>
            <td
              style="color: rgb(19, 124, 189); font-weight: 600;"
            >
              20
            </td>
            <td
              style="color: rgb(19, 124, 189); font-weight: 600;"
            >
              30
            </td>
          </tr>
        </tbody>
      </table>
      <div
        style="display: flex; justify-content: space-between; margin-top: 20px;"
      >
        <button
          class="bp3-button bp3-intent-primary"
          type="button"
        >
          <span
            class="bp3-icon bp3-icon-plus"
            icon="plus"
          >
            <svg
              data-icon="plus"
              height="16"
              viewBox="0 0 16 16"
              width="16"
            >
              <desc>
                plus
              </desc>
              <path
                d="M13 7H9V3c0-.55-.45-1-1-1s-1 .45-1 1v4H3c-.55 0-1 .45-1 1s.45 1 1 1h4v4c0 .55.45 1 1 1s1-.45 1-1V9h4c.55 0 1-.45 1-1s-.45-1-1-1z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
          <span
            class="bp3-button-text"
          >
            Add batch
          </span>
        </button>
        <button
          class="bp3-button"
          style="width: 160px;"
          type="button"
        >
          <span
            class="bp3-icon bp3-icon-clipboard"
            icon="clipboard"
          >
            <svg
              data-icon="clipboard"
              height="16"
              viewBox="0 0 16 16"
              width="16"
            >
              <desc>
                clipboard
              </desc>
              <path
                d="M11 2c0-.55-.45-1-1-1h.22C9.88.4 9.24 0 8.5 0S7.12.4 6.78 1H7c-.55 0-1 .45-1 1v1h5V2zm2 0h-1v2H5V2H4c-.55 0-1 .45-1 1v12c0 .55.45 1 1 1h9c.55 0 1-.45 1-1V3c0-.55-.45-1-1-1z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
          <span
            class="bp3-button-text"
          >
            Copy to clipboard
          </span>
        </button>
        <button
          class="bp3-button"
          type="button"
        >
          <span
            class="bp3-button-text"
          >
            Finalize Results
          </span>
        </button>
      </div>
    </fieldset>
  </form>
</div>
`;

exports[`offline batch round data entry submits offline batch 1`] = `
<div>
  <form
    class="sc-bdVaJa hazmWT"
  >
    <div
      style="width: 510px; margin-bottom: 20px;"
    >
      <p>
        When you have examined all the ballots assigned to you, enter the number of votes recorded for each candidate/choice for each batch of audited ballots.
      </p>
      
    </div>
    <fieldset>
      <table
        class="bp3-html-table bp3-html-table-bordered bp3-html-table-striped"
        id="results-table"
      >
        <thead>
          <tr>
            <th />
            <th>
              Batch Name
            </th>
            <th>
              Batch Type
            </th>
            <th>
              Choice One
            </th>
            <th>
              Choice Two
            </th>
            <th
              style="color: rgb(19, 124, 189); font-weight: 600;"
            >
              Total
            </th>
          </tr>
        </thead>
        <tbody>
          <tr>
            <td
              style="text-align: center;"
            >
              <button
                class="bp3-button"
                type="button"
              >
                <span
                  class="bp3-icon bp3-icon-edit"
                  icon="edit"
                >
                  <svg
                    data-icon="edit"
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                  >
                    <desc>
                      edit
                    </desc>
                    <path
                      d="M3.25 10.26l2.47 2.47 6.69-6.69-2.46-2.48-6.7 6.7zM.99 14.99l3.86-1.39-2.46-2.44-1.4 3.83zm12.25-14c-.48 0-.92.2-1.24.51l-1.44 1.44 2.47 2.47 1.44-1.44c.32-.32.51-.75.51-1.24.01-.95-.77-1.74-1.74-1.74z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
                <span
                  class="bp3-button-text"
                >
                  Edit
                </span>
              </button>
            </td>
            <td>
              Batch1
            </td>
            <td>
              Other
            </td>
            <td>
              10
            </td>
            <td>
              20
            </td>
            <td
              style="color: rgb(19, 124, 189); font-weight: 600;"
            >
              30
            </td>
          </tr>
          <tr>
            <td
              style="color: rgb(19, 124, 189); font-weight: 600;"
            />
            <td
              style="color: rgb(19, 124, 189); font-weight: 600;"
            >
              Total
            </td>
            <td
              style="color: rgb(19, 124, 189); font-weight: 600;"
            />
            <td
              style="color: rgb(19, 124, 189); font-weight: 600;"
            >
              10
            </td>
            <td
              style="color: rgb(19, 124, 189); font-weight: 600;"
            >
              20
            </td>
            <td
              style="color: rgb(19, 124, 189); font-weight: 600;"
            >
              30
            </td>
          </tr>
        </tbody>
      </table>
      <div
        style="display: flex; justify-content: space-between; margin-top: 20px;"
      >
        <button
          class="bp3-button bp3-intent-primary"
          type="button"
        >
          <span
            class="bp3-icon bp3-icon-plus"
            icon="plus"
          >
            <svg
              data-icon="plus"
              height="16"
              viewBox="0 0 16 16"
              width="16"
            >
              <desc>
                plus
              </desc>
              <path
                d="M13 7H9V3c0-.55-.45-1-1-1s-1 .45-1 1v4H3c-.55 0-1 .45-1 1s.45 1 1 1h4v4c0 .55.45 1 1 1s1-.45 1-1V9h4c.55 0 1-.45 1-1s-.45-1-1-1z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
          <span
            class="bp3-button-text"
          >
            Add batch
          </span>
        </button>
        <button
          class="bp3-button"
          style="width: 160px;"
          type="button"
        >
          <span
            class="bp3-icon bp3-icon-clipboard"
            icon="clipboard"
          >
            <svg
              data-icon="clipboard"
              height="16"
              viewBox="0 0 16 16"
              width="16"
            >
              <desc>
                clipboard
              </desc>
              <path
                d="M11 2c0-.55-.45-1-1-1h.22C9.88.4 9.24 0 8.5 0S7.12.4 6.78 1H7c-.55 0-1 .45-1 1v1h5V2zm2 0h-1v2H5V2H4c-.55 0-1 .45-1 1v12c0 .55.45 1 1 1h9c.55 0 1-.45 1-1V3c0-.55-.45-1-1-1z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
          <span
            class="bp3-button-text"
          >
            Copy to clipboard
          </span>
        </button>
        <button
          class="bp3-button"
          type="button"
        >
          <span
            class="bp3-button-text"
          >
            Finalize Results
          </span>
        </button>
      </div>
    </fieldset>
  </form>
</div>
`;

exports[`offline batch round data entry validation error for blank submission 1`] = `
<div>
  <form
    class="sc-bdVaJa hazmWT"
  >
    <div
      style="width: 510px; margin-bottom: 20px;"
    >
      <p>
        When you have examined all the ballots assigned to you, enter the number of votes recorded for each candidate/choice for each batch of audited ballots.
      </p>
      
    </div>
    <fieldset>
      <table
        class="bp3-html-table bp3-html-table-bordered bp3-html-table-striped"
        id="results-table"
      >
        <thead>
          <tr>
            <th />
            <th>
              Batch Name
            </th>
            <th>
              Batch Type
            </th>
            <th>
              Choice One
            </th>
            <th>
              Choice Two
            </th>
            <th
              style="color: rgb(19, 124, 189); font-weight: 600;"
            >
              Total
            </th>
          </tr>
        </thead>
        <tbody>
          <tr>
            <td
              colspan="5"
            >
              No batches added. Add your first batch below.
            </td>
          </tr>
          <tr>
            <td
              style="color: rgb(19, 124, 189); font-weight: 600;"
            />
            <td
              style="color: rgb(19, 124, 189); font-weight: 600;"
            >
              Total
            </td>
            <td
              style="color: rgb(19, 124, 189); font-weight: 600;"
            />
            <td
              style="color: rgb(19, 124, 189); font-weight: 600;"
            >
              0
            </td>
            <td
              style="color: rgb(19, 124, 189); font-weight: 600;"
            >
              0
            </td>
            <td
              style="color: rgb(19, 124, 189); font-weight: 600;"
            >
              0
            </td>
          </tr>
        </tbody>
      </table>
      <div
        style="display: flex; justify-content: space-between; margin-top: 20px;"
      >
        <button
          class="bp3-button bp3-intent-primary"
          type="button"
        >
          <span
            class="bp3-icon bp3-icon-plus"
            icon="plus"
          >
            <svg
              data-icon="plus"
              height="16"
              viewBox="0 0 16 16"
              width="16"
            >
              <desc>
                plus
              </desc>
              <path
                d="M13 7H9V3c0-.55-.45-1-1-1s-1 .45-1 1v4H3c-.55 0-1 .45-1 1s.45 1 1 1h4v4c0 .55.45 1 1 1s1-.45 1-1V9h4c.55 0 1-.45 1-1s-.45-1-1-1z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
          <span
            class="bp3-button-text"
          >
            Add batch
          </span>
        </button>
        <button
          class="bp3-button"
          style="width: 160px;"
          type="button"
        >
          <span
            class="bp3-icon bp3-icon-clipboard"
            icon="clipboard"
          >
            <svg
              data-icon="clipboard"
              height="16"
              viewBox="0 0 16 16"
              width="16"
            >
              <desc>
                clipboard
              </desc>
              <path
                d="M11 2c0-.55-.45-1-1-1h.22C9.88.4 9.24 0 8.5 0S7.12.4 6.78 1H7c-.55 0-1 .45-1 1v1h5V2zm2 0h-1v2H5V2H4c-.55 0-1 .45-1 1v12c0 .55.45 1 1 1h9c.55 0 1-.45 1-1V3c0-.55-.45-1-1-1z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
          <span
            class="bp3-button-text"
          >
            Copy to clipboard
          </span>
        </button>
        <button
          class="bp3-button"
          type="button"
        >
          <span
            class="bp3-button-text"
          >
            Finalize Results
          </span>
        </button>
      </div>
    </fieldset>
  </form>
</div>
`;
